--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Etch a Sketch</title>
 </head>
 <body>
-    <div class="container"></div>
+    <section class="container"></section>
     <script src="./script.js"></script>
 </body>
 </html>
